--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: java
+before_install:
+  - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -Drevision=1.14.4-R0.1-$TRAVIS_COMMIT deploy"
 deploy:
   provider: script
   script: 
