--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 before_install:
-  - "cp .travis.settings.xml $HOME/.m2/settings.xml
+  - "cp .travis.settings.xml $HOME/.m2/settings.xml"
 deploy:
   provider: script
   script: 
