--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -347,6 +347,10 @@ commands:
     description: Speaks in shout chat
     usage: /shout message
     aliases: []
+  saydiscord:
+    description: Say as discord (server only)
+    usage: /saydiscord <message>
+    aliases: []
   whisper:
     description: Speaks in whisper chat
     usage: /whisper message
