--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
 			<version>6.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+    <groupId>com.comphenix.protocol</groupId>
+    <artifactId>ProtocolLib</artifactId>
+    <version>4.4.0</version>
+  </dependency>
+		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.8.3</version>
