add ooc alias /o, seperate regen tick

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -422,7 +422,9 @@ commands:
   ooc:
     description: Sends a message to the ooc channel
     usage: /ooc message
-    aliases: []
+    aliases:
+    - oo
+    - o
   group:
     description: Group control commands
     usage: /group cmd
