--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 			<url>https://repo.dmulloy2.net/nexus/repository/snapshots</url>
 		</repository>
 		<repository>
+    <id>dmulloy2-repo</id>
+    <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
+  </repository>
+		<repository>
 			<id>0_vault-repo</id>
 			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
