--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 		</plugins>
 	</build>
 	<repositories>
+<repository>
+<id>aikar</id>
+<url>https://repo.aikar.co/content/groups/aikar</url>
+</repository>
 		<repository>
 			<id>dmulloy2-repo</id>
 			<url>http://repo.dmulloy2.net/nexus/repository/public/</url>
