--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,16 @@
 			<url>https://repo.md-5.net/content/repositories/releases/</url>
 		</repository>
 		<repository>
+			<id>md_5-snapshots</id>
+			<url>https://repo.md-5.net/content/repositories/snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+		<repository>
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
