--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-API</artifactId>
+			<artifactId>spigot-api</artifactId>
 			<version>1.14.4-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
