--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 		</repository>
 		<repository>
 			<id>0_vault-repo</id>
-			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
+			<url>https://jitpack.io</url>
 		</repository>
 		<repository>
 			<id>inventive-repo</id>
@@ -187,9 +187,9 @@
 			<version>1.8.3</version>
 		</dependency>
 		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>1.7.2</version>
+			<groupId>com.github.MilkBowl</groupId>
+			<artifactId>VaultAPI</artifactId>
+			<version>1.7</version>
 		</dependency>
 		<dependency>
         <groupId>net.ess3</groupId>
