--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 		</repository>
 		<repository>
 			<id>mvnrepository</id>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
