--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,8 @@
 			<url>http://maven.elmakers.com/repository/ </url>
 		</repository>
 		<repository>
-			<id>mvnrepository</id>
-			<url>https://repo1.maven.org/maven2</url>
+			<id>dmulloy2</id>
+			<url>https://repo.dmulloy2.net/nexus/repository/public</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
