--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Prep
       run: |
+        mvn -version
         export NOW=$(date +%s)
         echo $NOW
         cp .travis.settings.xml $HOME/.m2/settings.xml
