--- a/pom.xml
+++ b/pom.xml
@@ -221,7 +221,8 @@
 		<dependency>
 			<groupId>com.palmergames.bukkit.towny</groupId>
 			<artifactId>Towny</artifactId>
-			<version>0.95.1.0</version>
+			<version>0.95.2.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.lumine.xikage</groupId>
