--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -25,5 +25,5 @@ jobs:
         mvn -version
         export NOW=$(date +%s)
         echo $NOW
-        cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -Drevision=1.14.4-R0.1-$NOW deploy
+        cp .travis.settings.xml /home/runner/.m2/settings.xml && cp .travis.settings.xml /home/runner/work/solinia3-core/solinia3-core/settings.xml && mvn -Drevision=1.14.4-R0.1-$NOW deploy
 
