--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -26,7 +26,5 @@ jobs:
         export NOW=$(date +%s)
         echo $NOW
         mkdir ~/.m2
-        cp .travis.settings.xml ~/.m2/settings.xml
-        cp .travis.settings.xml /home/runner/work/solinia3-core/solinia3-core/settings.xml
-        mvn -Drevision=1.14.4-R0.1-$NOW deploy
+        cp .travis.settings.xml ~/.m2/settings.xml && cp .travis.settings.xml /home/runner/work/solinia3-core/solinia3-core/settings.xml && mvn -Drevision=1.14.4-R0.1-$NOW deploy
 
