--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -21,11 +21,13 @@ jobs:
         java -jar BuildTools.jar --rev 1.14.4 | grep -vE "[^/ ]*/[^/ ]*\s*KB\s*$" | grep -v "^\s*$":
 
     - name: Build with Maven
-      run: 
+      run: |
         mvn -version
         export NOW=$(date +%s)
         echo "::set-env name=NOW::$NOW"
         echo $NOW
         mkdir ~/.m2
-        cp .travis.settings.xml ~/.m2/settings.xml && cp .travis.settings.xml /home/runner/work/solinia3-core/solinia3-core/settings.xml && mvn -Drevision=1.14.4-R0.1-${{ env.NOW }} deploy
+        cp .travis.settings.xml ~/.m2/settings.xml
+        cp .travis.settings.xml /home/runner/work/solinia3-core/solinia3-core/settings.xml
+        mvn -Drevision=1.14.4-R0.1-${{ env.NOW }} deploy
 
