--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -24,9 +24,8 @@ jobs:
       run: |
         mvn -version
         export NOW=$(date +%s)
-        echo "::set-env name=NOW::$NOW"
         echo $NOW
         cp .travis.settings.xml ~/.m2/settings.xml
         cp .travis.settings.xml /home/runner/work/solinia3-core/solinia3-core/settings.xml
-        mvn -Drevision=1.14.4-R0.1-${{ env.NOW }} deploy
+        mvn -Drevision=1.14.4-R0.1-$NOW deploy
 
