--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -408,6 +408,10 @@ commands:
     description: Forces a players level
     usage: /forcelevel mcplayer level
     aliases: []
+  forcerace:
+    description: Forces a players race
+    usage: /forcerace mcplayer raceid
+    aliases: []
   forceskill:
     description: Forces a players skill level
     usage: /forcelevel mcplayer skillname level
