--- a/pom.xml
+++ b/pom.xml
@@ -119,12 +119,12 @@
 		</repository>
 		<repository>
 			<id>zz_lumine-repo</id>
-			<url>http://mvn.lumine.io/repository/maven-snapshots/</url>
+			<url>http://mvn.lumine.io/repository/maven-releases/</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 			<releases>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</releases>
 		</repository>
 		<repository>
@@ -227,7 +227,7 @@
 		<dependency>
 			<groupId>io.lumine.xikage</groupId>
 			<artifactId>MythicMobs</artifactId>
-			<version>4.9.0-SNAPSHOT</version>
+			<version>4.9.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
