fix tossup velocity so fall damage doesnt compound from the environment (uses spell defined fall damage only) - fixes #607

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -22,7 +22,9 @@ commands:
   assist:
     description: Assists a player target
     usage: /assist
-    aliases: []
+    aliases:
+    - ass
+    - a
   unmentor:
     description: Stops mentoring
     usage: /unmentor
