--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
 		<repository>
-			<id>nexus.hc.to</id>
-			<url>http://nexus.hc.to/content/repositories/thirdparty/</url>
+			<id>0_vault-repo</id>
+			<url>https://jitpack.io</url>
 		</repository>
 		<repository>
 			<id>inventive-repo</id>
@@ -78,6 +78,10 @@
 		<repository>
 			<id>3_dmulloy2-repo</id>
 			<url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+		</repository>
+		<repository>
+			<id>elmakers-repo</id>
+			<url>http://maven.elmakers.com/repository/ </url>
 		</repository>
 		<repository>
 			<id>mvnrepository</id>
@@ -132,10 +136,6 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
-		</repository>
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
 		</repository>
 	</repositories>
 	<distributionManagement>
@@ -221,7 +221,7 @@
 		<dependency>
 			<groupId>com.palmergames.bukkit.towny</groupId>
 			<artifactId>Towny</artifactId>
-			<version>0.96.1.11</version>
+			<version>0.95.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
